# mealie-hacs

./: .cookiecutter.json  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: constraints.txt  tests.yaml
custom_components/mealie/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/mealie/translations/: en.json  fr.json  nb.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_switch.py
