[tool.poetry]
name = "mealie-hacs"
version = "0.1.0"
description = ""
authors = ["hay-kot <hay-kot@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
homeassistant = "^2022.6.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
